--- a/random.html
+++ b/random.html
@@ -17,6 +17,8 @@
       </nav>
     </header>
 
+    <div class="website">
+
     <div class="shortenBox" id="shorten">
       <label for="url">Enter URL here:</label>
       <input type="text" name="url" id="url" required />
@@ -26,7 +28,48 @@
       <p id="requestInfo"></p>
     </div>
 
-    <div class="content">
+
+    <div class="text-center">
+      <h3>The link shortener thas has your brand's back</h3>
+      <p class="color-gray">Your brand wasn’t built to be hidden. Help it stand out with branded links that drive more clicks.</p>
+    </div>
+
+    <div class="cards text-center">
+      <div class="card">
+        <img height="150" src="https://tinyurl.com/y2d8e8cy"/>
+        <h3>Inspire trust</h3>
+        <p>With more clicks comes increased brand recognition and consumer trust in your communications—which in turn inspires even more engagement with your links. (It’s a wonderful cycle.)</p>
+      </div>
+      <div class="card">
+        <img height="150" src="https://tinyurl.com/y5p79lmy"/>
+        <h3>Book results</h3>
+        <p></p>On top of better deliverability and click-through, rich link-level data gives you crucial insight into your link engagement so your team can make smarter decisions around its content and communications.</p>
+      </div>
+      <div class="card">
+        <img height="150" src="https://tinyurl.com/yxc89uvx"/>
+        <h3>Gain control</h3>
+        <p>Take credit for your content and learn more about how it’s consumed by enabling auto-branding—a feature that ensures your brand remains in any link someone shortens pointing to your website.</p>
+      </div>
+    </div>
+
+  <hr />
+  <br />
+
+  <div class="text-center">
+    <h3>The most recognized brands in the world love Bitly</h3>
+    <img src="https://tinyurl.com/yyyh7l56"/>
+    <img src="https://tinyurl.com/y6z489qj"/>
+    <img src="https://tinyurl.com/y5qwjp69"/>
+    <img src="https://tinyurl.com/y26yw8kl"/>
+    <img src="https://tinyurl.com/y48n8oe9"/>
+    <img src="https://tinyurl.com/yyf45sar"/>
+  </div>
+
+
+  </div>
+
+
+    <!-- <div class="content">
       <div class="section">
         <h2 id="how">But how does it work?</h2>
         <p>
@@ -53,7 +96,10 @@
         <p>
           But that does not mean that we are a small company. We infact have
           many employees
-        </p>
+        </p> -->
+
+
+
         <!-- <table border="1">
           <tr>
             <th>Company</th>
