--- a/random.html
+++ b/random.html
@@ -18,56 +18,147 @@
     </header>
 
     <div class="website">
+      <div class="shortenBox" id="shorten">
+        <label for="url">Enter URL here:</label>
+        <input type="text" name="url" id="url" required />
+        <button id="submitButton">Shorten URL!</button>
+        <br />
+        <a href="" id="result" target="_blank"></a>
+        <p id="requestInfo"></p>
+      </div>
 
-    <div class="shortenBox" id="shorten">
-      <label for="url">Enter URL here:</label>
-      <input type="text" name="url" id="url" required />
-      <button id="submitButton">Shorten URL!</button>
+      <div class="text-center">
+        <h2>The link shortener thas has your brand's back</h2>
+        <p class="color-gray">
+          Your brand wasn’t built to be hidden. Help it stand out with branded
+          links that drive more clicks.
+        </p>
+      </div>
+
+      <div class="cards text-center">
+        <div class="card">
+          <img height="150" src="https://tinyurl.com/y2d8e8cy" />
+          <h3>Inspire trust</h3>
+          <p>
+            With more clicks comes increased brand recognition and consumer
+            trust in your communications—which in turn inspires even more
+            engagement with your links. (It’s a wonderful cycle.)
+          </p>
+        </div>
+        <div class="card">
+          <img height="150" src="https://tinyurl.com/y5p79lmy" />
+          <h3>Book results</h3>
+          <p>
+            On top of better deliverability and click-through, rich link-level
+            data gives you crucial insight into your link engagement so your
+            team can make smarter decisions around its content and
+            communications.
+          </p>
+        </div>
+        <div class="card last">
+          <img height="150" src="https://tinyurl.com/yxc89uvx" />
+          <h3>Gain control</h3>
+          <p>
+            Take credit for your content and learn more about how it’s consumed
+            by enabling auto-branding—a feature that ensures your brand remains
+            in any link someone shortens pointing to your website.
+          </p>
+        </div>
+      </div>
+
+      <hr />
       <br />
-      <a href="" id="result" target="_blank"></a>
-      <p id="requestInfo"></p>
-    </div>
 
-
-    <div class="text-center">
-      <h3>The link shortener thas has your brand's back</h3>
-      <p class="color-gray">Your brand wasn’t built to be hidden. Help it stand out with branded links that drive more clicks.</p>
-    </div>
-
-    <div class="cards text-center">
-      <div class="card">
-        <img height="150" src="https://tinyurl.com/y2d8e8cy"/>
-        <h3>Inspire trust</h3>
-        <p>With more clicks comes increased brand recognition and consumer trust in your communications—which in turn inspires even more engagement with your links. (It’s a wonderful cycle.)</p>
+      <div class="text-center">
+        <h2>The most recognized brands in the world love Bitly</h2>
+        <img src="https://tinyurl.com/yyyh7l56" />
+        <img src="https://tinyurl.com/y6z489qj" />
+        <img src="https://tinyurl.com/y5qwjp69" />
+        <img src="https://tinyurl.com/y26yw8kl" />
+        <img src="https://tinyurl.com/y48n8oe9" />
+        <img src="https://tinyurl.com/yyf45sar" />
       </div>
-      <div class="card">
-        <img height="150" src="https://tinyurl.com/y5p79lmy"/>
-        <h3>Book results</h3>
-        <p></p>On top of better deliverability and click-through, rich link-level data gives you crucial insight into your link engagement so your team can make smarter decisions around its content and communications.</p>
-      </div>
-      <div class="card">
-        <img height="150" src="https://tinyurl.com/yxc89uvx"/>
-        <h3>Gain control</h3>
-        <p>Take credit for your content and learn more about how it’s consumed by enabling auto-branding—a feature that ensures your brand remains in any link someone shortens pointing to your website.</p>
+
+      <hr />
+      <br />
+      <h2 class="text-center">Frequently asked questions</h2>
+      <br />
+      <div class="faq">
+        <div class="single-faq">
+          <p><b>What Is a URL Shortener?</b></p>
+          <p>
+            A URL shortener, also known as a link shortener, seems like a simple
+            tool, but it is a service that can have a dramatic impact on your
+            marketing efforts.
+          </p>
+          <p>
+            Link shorteners work by transforming any long URL into a shorter,
+            more readable link. When a user clicks the shortened version,
+            they’re automatically forwarded to the destination URL.<br />
+          </p>
+          <p>
+            Think of a short URL as a more descriptive and memorable nickname
+            for your long webpage address. You can, for example, use a short URL
+            like bit.ly/CelebrateBitly so people will have a good idea about
+            where your link will lead before they click it.<br />
+          </p>
+          <p>
+            If you’re contributing content to the online world, you need a URL
+            shortener.<br />
+          </p>
+          <p>
+            Make your URLs stand out with our easy to use free link shortener
+            above.
+          </p>
+        </div>
+
+        <div class="single-faq">
+          <p><b>Benefits of a Short URL</b></p>
+          <p>
+            How many people can even remember a long web address, especially if
+            it has tons of characters and symbols? A short URL can make your
+            link more memorable. Not only does it allow people to easily recall
+            and share your link with others, it can also dramatically improve
+            traffic to your content.
+          </p>
+          <p>
+            On a more practical side, a short URL is also easier to incorporate
+            into your collateral – whether you’re looking to engage with your
+            customers offline or online.
+          </p>
+          <p>
+            Bitly is the best URL shortener for everyone, from influencers to
+            small brands to large enterprises, who are looking for a simple way
+            to create, track and manage their links.
+          </p>
+        </div>
+
+        <div class="single-faq">
+          <p><b>What is a Custom URL Shortener?</b></p>
+          <p>
+            A custom URL shortener, sometimes referred to as a branded URL
+            shortener, lets you brand your links.
+          </p>
+          <p>
+            For example, instead of bit.ly/xyz, you could use a custom short URL
+            like yourbrnd.co/xyz.
+          </p>
+
+          <p>
+            There are several benefits of branding your short links. Branded
+            links build trust between your audience and your business, drive
+            more clicks, give your audience a preview of where they are being
+            taken and increase brand awareness.
+          </p>
+
+          <p>
+            A link shortening service that includes custom short URLs is vital
+            to improving audience engagement with your communications. A short
+            URL is good, but a custom URL works every time.
+          </p>
+        </div>
       </div>
     </div>
-
-  <hr />
-  <br />
-
-  <div class="text-center">
-    <h3>The most recognized brands in the world love Bitly</h3>
-    <img src="https://tinyurl.com/yyyh7l56"/>
-    <img src="https://tinyurl.com/y6z489qj"/>
-    <img src="https://tinyurl.com/y5qwjp69"/>
-    <img src="https://tinyurl.com/y26yw8kl"/>
-    <img src="https://tinyurl.com/y48n8oe9"/>
-    <img src="https://tinyurl.com/yyf45sar"/>
-  </div>
-
-
-  </div>
-
 
     <!-- <div class="content">
       <div class="section">
@@ -98,9 +189,7 @@
           many employees
         </p> -->
 
-
-
-        <!-- <table border="1">
+    <!-- <table border="1">
           <tr>
             <th>Company</th>
             <th>Contact</th>
@@ -117,8 +206,8 @@
             <td>Mexico</td>
           </tr>
         </table> -->
-      </div>
-    </div>
+    <!-- </div> -->
+    <!-- </div> -->
 
     <script>
       var button = document.getElementById("submitButton");
